Añadida cache para mejorar los tiempos de las consultas.